syntax = "proto3";
//生成文件所在包名
option java_package = "com.gejian.pixel.proto";
//生成的java文件名
option java_outer_classname = "ConstPvpBasicTableItemExProtobuf";

message	ConstPvpBasicTableItemEx  {
	 uint32	id = 1;
	 uint32	range_min = 2;
	 uint32	range_max = 3;
	 string	range = 4;
}